main/default/objects/Master_Binder__c/Master_Binder__c.object-meta.xml
<CustomObject>
    <label>Master Binder</label>
    <nameField>
        <label>Master Binder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Binders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>