main/default/objects/Master_Binder__c/fields/Coverholder_Name__c.field-meta.xml
<CustomField>
    <fullName>Coverholder_Name__c</fullName>
    <label>Coverholder Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>