main/default/objects/Master_Binder__c/fields/Coverholder_Pin__c.field-meta.xml
<CustomField>
    <fullName>Coverholder_Pin__c</fullName>
    <label>Coverholder Pin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>