main/default/objects/Master_Binder__c/fields/Inception_Date__c.field-meta.xml
<CustomField>
    <fullName>Inception_Date__c</fullName>
    <label>Inception Date</label>
    <type>Date</type>
</CustomField>