main/default/objects/Master_Binder__c/fields/Layer__c.field-meta.xml
<CustomField>
    <fullName>Layer__c</fullName>
    <label>Layer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Excess</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>