main/default/objects/Master_Binder__c/fields/MGA_Commission__c.field-meta.xml
<CustomField>
    <fullName>MGA_Commission__c</fullName>
    <label>MGA Commission</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>