main/default/objects/Master_Binder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Coverholder_Name__c</columns>
    <columns>Coverholder_Pin__c</columns>
    <columns>Layer__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Inception_Date__c</columns>
    <columns>MGA_Commission__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>